# yocto-hello-c-cmake

./: CMakeLists.txt  README.md  hello-cmake.service  hello_cmake.c
